tests/expected_invalid_failing_match_missing_success.diag.out
<input>:12:5: error: match over a `fails` call must include a succeeded(...) arm
        match parse() {
        ^^^^^^^^^^^^^^^
